# syncoid

./: README.md  docker-compose.test.yml  install.sh  pyproject.toml
scripts/: syncoid-configure  syncoid-run  syncoid-watch
shortcuts/: sync-now
syncoid/: __init__.py  __main__.py  cli.py  config.py  power_net.py  scheduler.py  syncthing.py  watcher.py
tests/: Dockerfile  conftest.py  test_cli.py  test_config.py  test_power_net.py  test_scheduler.py  test_syncoid.py  test_watcher.py
tests/fixtures/: syncthing-config.xml
tests/integration/: test_cli_flow.py  test_stubs.py  test_syncthing_api.py  test_watcher_live.py
tests/stubs/: termux-battery-status  termux-connectivity  termux-job-scheduler  termux-notification  termux-wake-lock  termux-wake-unlock  termux-wifi-connectioninfo
