[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syncoid"
version = "1.0.0"
description = "Battery-efficient Syncthing scheduler for Termux/Android"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Syncoid Contributors"}
]
keywords = ["syncthing", "termux", "android", "sync", "scheduler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Android",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving :: Mirroring",
]

[project.scripts]
syncoid = "syncoid.cli:main"

[project.urls]
Homepage = "https://github.com/ftelnov/syncoid"
Repository = "https://github.com/ftelnov/syncoid"
Issues = "https://github.com/ftelnov/syncoid/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["syncoid*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
